--- a/config-user.yml
+++ b/config-user.yml
@@ -11,9 +11,9 @@ mybatis:
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 spring:
-   profiles: dev
    application:
-    name: microservicecloud-user 
+    name: microservicecloud-user
+   profiles: dev
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
@@ -24,36 +24,42 @@ spring:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
-      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
-   rabbitmq:
-     host: 192.168.100.3
-     port: 5672
-     username: admin
-     password: admin
-   cloud:
-     stream:
-       bindings:
-         myInput:
-           destination: minestream
-           group: stream
-           consumer:
-             partitioned: true  #启动分区
-         myOutput:
-           destination: minestream
-           producer:
-             partitionKeyExpression: payload
-             partitionCount: 1
-       instance-count: 1
-       instance-index: 0
-#eureka:
-#  client: #客户端注册进eureka服务列表内
-#    service-url:
-#      #defaultZone: http://localhost:7001/eureka
-#       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
-#  instance:
-#    instance-id: microservicecloud-dept8001
-#    prefer-ip-address: true     #访问路径可以显示IP地址
-info: 
+      max-wait-millis: 200
+                                    # 等待连接获取的最大超时时间
+#   rabbitmq:
+#     host: 192.168.100.3
+#     port: 5672
+#     username: admin
+#     password: admin
+#   cloud:
+#     stream:
+#       bindings:
+#         myInput:
+#           destination: minestream
+#           group: stream
+#           consumer:
+#             partitioned: true  #启动分区
+#         myOutput:
+#           destination: minestream
+#           producer:
+#             partitionKeyExpression: payload
+#             partitionCount: 1
+#       instance-count: 1
+#       instance-index: 0
+   jpa:
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+          show_sql: true
+          ejb:
+            interceptor: com.xuecheng.userservice.component.QueryResInterceptor
+          cache:
+            use_second_level_cache: true
+      hibernate:
+        ddl-auto: update
+
+info:
   app.name: atguigu-microservicecloud
   company.name: www.atguigu.com
   build.artifactId: $project.artifactId$
