--- a/config-user.yml
+++ b/config-user.yml
@@ -122,6 +122,9 @@ spring:
 #  instance:
 #    instance-id: microservicecloud-dept8001
 #    prefer-ip-address: true     #访问路径可以显示IP地址
+  redis:
+    host: 192.168.100.3
+    port: 6379
 info: 
   app.name: atguigu-microservicecloud
   company.name: www.atguigu.com
