--- a/config-user.yml
+++ b/config-user.yml
@@ -11,9 +11,9 @@ mybatis:
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 spring:
+   profiles: dev
    application:
     name: microservicecloud-user
-   profiles: dev
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
@@ -24,28 +24,27 @@ spring:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
-      max-wait-millis: 200
-                                    # 等待连接获取的最大超时时间
-#   rabbitmq:
-#     host: 192.168.100.3
-#     port: 5672
-#     username: admin
-#     password: admin
-#   cloud:
-#     stream:
-#       bindings:
-#         myInput:
-#           destination: minestream
-#           group: stream
-#           consumer:
-#             partitioned: true  #启动分区
-#         myOutput:
-#           destination: minestream
-#           producer:
-#             partitionKeyExpression: payload
-#             partitionCount: 1
-#       instance-count: 1
-#       instance-index: 0
+      max-wait-millis: 200      # 等待连接获取的最大超时时间
+   rabbitmq:
+     host: 192.168.100.3
+     port: 5672
+     username: admin
+     password: admin
+   cloud:
+     stream:
+       bindings:
+         myInput:
+           destination: minestream
+           group: stream
+           consumer:
+             partitioned: true  #启动分区
+         myOutput:
+           destination: minestream
+           producer:
+             partitionKeyExpression: payload
+             partitionCount: 1
+       instance-count: 1
+       instance-index: 0
    jpa:
       show-sql: true
       properties:
@@ -58,7 +57,9 @@ spring:
             use_second_level_cache: true
       hibernate:
         ddl-auto: update
-
+   redis:
+     host: 192.168.100.3
+     port: 6379
 info:
   app.name: atguigu-microservicecloud
   company.name: www.atguigu.com
