--- a/config-user.yml
+++ b/config-user.yml
@@ -26,10 +26,10 @@ spring:
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200      # 等待连接获取的最大超时时间
   rabbitmq:
-    host: 192.168.100.3
+    host: 192.168.50.100
     port: 5672
-    username: admin
-    password: admin
+    username: guest
+    password: guest
   cloud:
     stream:
       bindings:
@@ -58,7 +58,7 @@ spring:
     hibernate:
       ddl-auto: update
   redis:
-    host: 192.168.100.3
+    host: 192.168.50.100
     port: 6379
 info:
   app.name: atguigu-microservicecloud
