--- a/config-user.yml
+++ b/config-user.yml
@@ -60,6 +60,9 @@ spring:
   redis:
     host: 192.168.50.100
     port: 6379
+  data:
+    mongodb:
+      uri: mongodb://192.168.50.100:27017/mydb
 info:
   app.name: atguigu-microservicecloud
   company.name: www.atguigu.com
