--- a/config-user.yml
+++ b/config-user.yml
@@ -77,3 +77,9 @@ eureka:
   instance: #实例别名
     instance-id: servuce-cloued8001XX
     prefer-ip-address: true
+security:
+  oauth2:
+    resource:
+      id: resource
+      user-info-uri: http://192.168.50.115:9527/uaa/user
+      prefer-token-info: false
