--- a/config-user.yml
+++ b/config-user.yml
@@ -77,3 +77,13 @@ eureka:
   instance: #实例别名
     instance-id: servuce-cloued8001XX
     prefer-ip-address: true
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8002/users/current
+    client:
+      id: client_2
+      client-secret: 123456
+      access-token-uri: http://localhost:8002/oauth/token
+      grant-type: client_credentials,password
+      scope: server
