--- a/config-user.yml
+++ b/config-user.yml
@@ -78,12 +78,19 @@ eureka:
     instance-id: servuce-cloued8001XX
     prefer-ip-address: true
 security:
+  basic:
+    enabled: false
   oauth2:
     resource:
-      user-info-uri: http://localhost:8002/users/current
-    client:
-      id: client_2
-      client-secret: 123456
-      access-token-uri: http://localhost:8002/oauth/token
-      grant-type: client_credentials,password
-      scope: server
+      user-info-uri:  http://security/users/current
+      prefer-token-info: false
+# security:
+  # oauth2:
+    # resource:
+      # user-info-uri: http://localhost:8002/users/current
+    # client:
+      # id: client_2
+      # client-secret: 123456
+      # access-token-uri: http://localhost:8002/oauth/token
+      # grant-type: client_credentials,password
+      # scope: server
