--- a/config-user.yml
+++ b/config-user.yml
@@ -82,7 +82,7 @@ security:
     enabled: false
   oauth2:
     resource:
-      user-info-uri:  http://localhost:9527/security/users/current
+      user-info-uri:  http://192.168.50.115:9527/security/users/current
       prefer-token-info: false
 # security:
   # oauth2:
