--- a/config-user.yml
+++ b/config-user.yml
@@ -81,4 +81,4 @@ security:
   oauth2:
     resource:
       user-info-uri:  http://192.168.50.115:9527/security/users/current
-      prefer-token-info: false
+      prefer-token-info: true
